--- a/styles.css
+++ b/styles.css
@@ -149,10 +149,29 @@ main {
 
 @media screen and (max-width: 1440px) {
 
-
- .hero-image img{
-    margin-top: 90px;
+  .hero-image {
+    width: 100%;
 
   }
 
+  .hero-image img {
+    margin-top: 90px;
+  }
+
+  .hero-text {
+    margin-top: 80px;
+    border:2.6rem dotted;
+    /* padding: 5px; */
+
+
+  }
+
+  .hero-text h1 {
+    margin-top: 50px;
+  }
+
+  .socials {
+    margin-top: 80px;
+    margin-bottom: 40px;
+  }
 }
