--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,10 @@ main {
 }
 
 .hero-text {
-  margin-top: 8%;
-  padding-left: 15px;
-  padding-right: 25px;
-  line-height: 1.7;
+  margin: 100px 0 0 15px;
+  line-height: 1.8;
 }
+
 
 .hero-text h1 {
   font-family: "Poppins", sans-serif;
@@ -90,7 +89,7 @@ main {
   outline-color: hsl(300, 69%, 71%);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 375px) {
   html,
   body {
     overflow-x: hidden;
@@ -126,7 +125,7 @@ main {
 
   .hero-text {
     text-align: center;
-    margin-top: 80px;
+    margin:100px 30px 0 28px;
   }
 
   .hero-text h1 {
@@ -147,31 +146,12 @@ main {
   }
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
 
-  .hero-image {
-    width: 100%;
-
-  }
-
-  .hero-image img {
-    margin-top: 90px;
-  }
-
-  .hero-text {
-    margin-top: 80px;
-    border:2.6rem dotted;
-    /* padding: 5px; */
+  .hero-text{
+    margin:100px 90px 0 40px;
 
 
   }
 
-  .hero-text h1 {
-    margin-top: 50px;
-  }
-
-  .socials {
-    margin-top: 80px;
-    margin-bottom: 40px;
-  }
 }
